fixed printing commands with unset HSHPRINTCMDS

--- a/src/usr/share/hsh/Makefile
+++ b/src/usr/share/hsh/Makefile
@@ -39,7 +39,7 @@ HSHCOLORRST = \033[00m
 endif
 
 ifneq ($(HSHPRINTCMDS), 1)
-HSH@ := @
+HSHCMDPREFIX := @
 endif
 
 SRC := $(HSHPACKETS:%=$(HSHROOT)/%)
