--- a/src/usr/share/hsh/Makefile
+++ b/src/usr/share/hsh/Makefile
@@ -73,8 +73,19 @@ SRC := $(HSHPACKETS:%=$(HSHROOT)/%)
 all: $(HSHPACKETS:%=%/discard)
 	$(HSHCMDPREFIX)if [ -n $(HSHPOOLDIR) ]; then \
 		echo "\t"'$(HSHCOLORPKT)$*: $(HSHCOLORMSG)updating packages file$(HSHCOLORRST)'; \
+		if [ -n "$(HSHGPGKEY)" ]; then \
+			gpg --export -a $(HSHGPGKEY) > $(HSHPOOLDIR)/$(HSHPGPKEY).key; \
+			dpkg-sig -k $(HSHGPGKEY) -s builder $(HSHPOOLDIR)/*.deb; \
+		fi; \
 		dpkg-scanpackages $(HSHPOOLDIR) > $(HSHPOOLDIR)/Packages 2>/dev/null; \
 		bzip2 -kf $(HSHPOOLDIR)/Packages; \
+		echo MD5Sum: > Release; \
+		(cd $(HSHPOOLDIR); \
+			for i in Packages Packages.bz2 ; do echo " "`md5sum $i` `du $i` >> Release; done; \
+		); \
+		if [ -n "$(HSHGPGKEY)" ]; then \
+			gpg --yes -abs -u $(HSHGPGKEY) -o $(HSHPOOLDIR)/Release.gpg $(HSHPOOLDIR)/Release; \
+		fi; \
 	fi
 
 status: $(HSHPACKETS:%=%/status)
